
2022-09-08  Simon Sobisch <simonsobisch@gnu.org>

	* configure.ac: cleanup curses library check

2022-07-27  Simon Sobisch <simonsobisch@gnu.org>

	* configure.ac: check for ncursesw first, then ncurses;
	  in case of ncurses check for ncurses.h again

2022-07-06  Nicolas Berthier <nicolas.berthier@ocamlpro.com>

	* configure.ac: Check for __attribute__((pure))

2022-06-06  Simon Sobisch <simonsobisch@gnu.org>

	* configure.ac (COB_CFLAGS): handle -ggdb options correctly

2022-05-31  Simon Sobisch <simonsobisch@gnu.org>

	* configure.ac (COB_CFLAGS): handle optimization options -Oz and -Ofast,
	  don't remove leading -O of unknown options

2022-05-04  Simon Sobisch <simonsobisch@gnu.org>

	* configure.ac: test for basic MAKE functionality
	* configure.ac: style change when testing for not set/empty variable

2022-04-29  Simon Sobisch <simonsobisch@gnu.org>

	* configure.ac: check for -pipe option for compilers that claim to be GCC,
	  as this isn't available on all of these and not on all environments
	* configure.ac: added check for BDB_LIBS, allowing to explicit specify
	  link options necessary for BDB, library used; if not set use old
	  logic of deriving the library name from BDB version (db.h)
	* configure.ac: experimental checking for XCurses

2022-03-29  Simon Sobisch <simonsobisch@gnu.org>

	* configure.ac: dropped obsolete AC_PROG_CC_STD, AC_HEADER_STDC as
	  already included in AC_PROG_CC and assumed otherwise

2022-03-11  Simon Sobisch <simonsobisch@gnu.org>

	* Makefile.am: targets to create binary distributions

2022-01-03  Simon Sobisch <simonsobisch@gnu.org>

	* general: revert change 2019-06-05 - all header files that are included
	  from the system use <include.h>, "local.h" is used otherwise with the
	  exceptions of to-be-installed headers which include files that have a
	  local reference to each other after installation (common.h + 
	  and exceptions.def)

2021-11-02  Simon Sobisch <simonsobisch@gnu.org>
