@@ -68,3 +68,44 @@ For preparing a distribution do the following steps:
   make distcheck        # generate a distribution tarball and check
                         # that it will work in a VPATH environment
                         # including make targets uninstall, distclean and dist
+
+Most often there is a minimal supported version (for example GnuCOBOL 3.x
+should work with GnuCOBOL versions back to 2.2); the easiest way to test
+that is to first have the old version installed installed or build locally,
+then do a manual run of hand-picked "special" tests from the version to test,
+for example:
+
+  make check TESTSUITEFLAGS="--debug -k exception-location -k trace"
+
+which keeps the test sources because of "--debug".
+
+Then do for each test you're interested in the following:
+ pushd tests/testsuite.dir/NNNN  # go into the test directory
+ ./run                           # re-execute the test verbose with
+                                 # the version under test
+ cobc --debug XXXXX              # execute all of the compile commands
+                                 # with the old active environment
+OR                               # if you want to compare with an
+                                 # uninstalled version:
+ /some/path/pre-inst-env cobc --debug XXXXX
+ ../../../pre-inst-env prog      # execute the old-compiled programs
+                                 # with the version under test
+ popd                            # back to root...
+ 
+And when running compare the output to the one seen when executing ./run.
+
+For an unspecific test that does not check any of the "newer" features or
+extensions the NIST suite can be compiled with that "old active" environment
+while being executed with the version under test.
+
+ cd tests/cobol85
+ make test-local-compat -j6      # compile with the old active environment
+                                 # but run with the new version under test
+OR                               # if you want to compare with an
+                                 # uninstalled version:
+ make test-local-compat COBC="/some/path/pre-inst-env cobc"
+
+There should be no difference shown as long as the "old version" passed
+the same tests as the new version - given the example above: there was
+no support for REPORT WRITER in 2.2 so there would be an expected failure
+of the RW tests).
