@@ -1,7 +1,7 @@
 #
 # Makefile gnucobol/tests/cobol85/##MODULE##
 #
-# Copyright (C) 2003-2012, 2015-2020 Free Software Foundation, Inc.
+# Copyright (C) 2002-2012, 2015-2020,2022 Free Software Foundation, Inc.
 # Written by Keisuke Nishida, Roger While, Simon Sobisch
 #
 # This file is part of GnuCOBOL.
@@ -29,6 +29,13 @@ all:
 	@$(MAKE) test
 	@$(MAKE) diff
 #	@$(MAKE) test-O
+#	@$(MAKE) diff
+	@echo
+
+all-local:
+	@$(MAKE) test-local
+	@$(MAKE) diff
+#	@$(MAKE) test-O-local
 #	@$(MAKE) diff
 	@echo
 
