@@ -1,4 +1,9 @@
 
+2022-10-04  Simon Sobisch <simonsobisch@gnu.org>
+
+	* HACKING: add notes for testing compatibility with GnuCOBOL modules
+	  generated by an earlier version of GnuCOBOL
+
 2022-09-08  Simon Sobisch <simonsobisch@gnu.org>
 
 	* configure.ac: cleanup curses library check
